Bug 620906 - Back out part of bug 289384 to make sure that scrollbars work in CKEditor fields again; r=roc a=blocking-final+
UltraBlame original commit: 985c54525bc0c39d7e624c68ca2966bd4456b804

--- a/layout/style/designmode.css
+++ b/layout/style/designmode.css
@@ -432,34 +432,6 @@ BLOCK
 *
 *
 /
-:
-root
-{
--
-moz
--
-binding
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-content
-/
-platformHTMLBindings
-.
-xml
-#
-editor
-"
-)
-;
-}
 *
 |
 *
